--- a/src/app/contents/blog/blog.component.html
+++ b/src/app/contents/blog/blog.component.html
@@ -86,7 +86,7 @@
                         <div class="flex-1">
                             <article lang="en">
                                 <a class="group relative mb-6 block overflow-hidden bg-gradient-to-t sm:mb-0 sm:rounded-2xl sm:p-4 md:p-6"
-                                    [routerLink]="'/blog/'+article.url">
+                                    [routerLink]="'/blog/'+article.url" (mouseover)="isHover=true" (mouseout)="isHover=false">
                                     <div
                                         class="text-slate mb-2 flex flex-col gap-2 text-xs text-slate-500 dark:text-slate-400 md:mb-1">
                                         <div class="flex gap-1">
@@ -124,12 +124,7 @@
                                     <div
                                         class="text-accent-600 items-center gap-1 text-sm font-semibold dark:text-accent-400 flex">
                                         read more
-                                        <svg viewBox="0 0 20 20" fill="currentColor"
-                                            class="group-hover:animate-bounce-x mt-1 h-3 w-3 transition">
-                                            <path
-                                                d="M14.5 7.40192C16.5 8.55662 16.5 11.4434 14.5 12.5981L8.5 16.0622C6.5 17.2169 4 15.7735 4 13.4641L4 6.5359C4 4.2265 6.5 2.78312 8.5 3.93782L14.5 7.40192Z">
-                                            </path>
-                                        </svg>
+                                        <svg-icon [icon]="Icons.ChevronRightIcon" className="h-3 w-3 mt-1" [ngClass]="{'animate-bounce-x transition': isHover}"/>
                                     </div>
                                 </a>
                             </article>
