--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -80,6 +80,21 @@
       -webkit-box-shadow: 0 0 0 30px #161e31 inset !important;
   }
 
+  .animate-bounce-x	{ 
+    animation: bounce 0.85s infinite;
+  }
+
+  @keyframes bounce {
+    0%, 100% {
+      transform: translateX(0);
+      animationTimingFunction: cubic-bezier(0.8, 0, 1, 1);
+    }
+    50% {
+      transform: translateX(15%);
+      animationTimingFunction: cubic-bezier(0, 0, 0.2, 1);
+    }
+  }
+
 }
 
 .font-mono {
