--- a/src/app/contents/blog/blog.component.html
+++ b/src/app/contents/blog/blog.component.html
@@ -12,7 +12,7 @@
 </page-header>
 <div class="scroll-mt-[86px]" data-accent="violet">
     <div class="content-wrapper">
-        <div class="flex flex-col gap-8 md:flex-row md:gap-8 lg:gap-24">
+        <div *ngIf="articles && articles.length > 0; else noContent" class="flex flex-col gap-8 md:flex-row md:gap-8 lg:gap-24">
             <div class="md:w-64"></div>
             <div class="flex-1">
                 <div class="mb-8 flex items-start gap-4 md:gap-6"
@@ -133,5 +133,8 @@
                 </div>
             </div>
         </div>
+        <ng-template #noContent>
+            <div class="flex font-normal text-slate-400 md:text-right dark:text-slate-700" data-accent="violet"> -- Nothing to see</div>
+        </ng-template>
     </div>
 </div>
