--- a/src/app/contents/today-i-learned/today-i-learned.component.html
+++ b/src/app/contents/today-i-learned/today-i-learned.component.html
@@ -1,5 +1,5 @@
 <page-header class="pointer-events-none select-none" [title]="'Today I Learned'"
-    description="Short notes on front-end related topics.">
+    description="Short notes on full-stack related topics.">
     <ng-template>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke="currentColor" fill="none" stroke-width="0.1"
             stroke-linecap="round" stroke-linejoin="round"
@@ -57,5 +57,5 @@
     </div>
 </div>
 <div *ngIf="error">
-    <div class="content-wrapper flex font-normal text-slate-400 md:text-right dark:text-slate-700" data-accent="violet">Nothing to see</div>
+    <div class="content-wrapper flex font-normal text-slate-400 md:text-right dark:text-slate-700" data-accent="violet"> -- Nothing to see</div>
 </div>
