--- a/src/app/contents/today-i-learned/today-i-learned.component.html
+++ b/src/app/contents/today-i-learned/today-i-learned.component.html
@@ -32,11 +32,11 @@
 <div *ngIf="!error" class="scroll-mt-[86px]">
     <div *ngIf="articles" class="content-wrapper mdx-contents" data-accent="violet">
         <div *ngFor="let article of articles; index as i" class="flex flex-row gap-6 md:gap-12 lg:gap-24">
-            <div *ngIf="loaded && !error" class="hidden md:block md:pb-24 min-w-[160px]">
+            <div *ngIf="loaded && !error" class="hidden md:block md:pb-24 lg:min-w-[160px]">
                 <div class="mt-4 pt-1.5 md:sticky md:top-[86px] fm:relative fm:top-0">
                     <div class="font-semibold text-slate-700 md:text-right dark:text-slate-300"><time
-                            class="block md:hidden capitalize">{{articles?.creation_date}}</time><time
-                            class="hidden md:block capitalize">{{article?.creation_date}}</time></div>
+                        class="md:block lg:hidden capitalize">{{article?.creation_date}}</time><time
+                        class="md:hidden lg:block capitalize">{{article?.format_date}}</time></div>
                 </div>
             </div>
             <div *ngIf="loaded && !error" class="border-divider-light items-stretch border dark:border-divider-dark"></div>
