--- a/src/styles/md-contents.scss
+++ b/src/styles/md-contents.scss
@@ -32,10 +32,6 @@
 
   & p {
     @apply leading-relaxed;
-
-    & + p {
-      @apply mt-4 md:mt-5;
-    }
   }
 
   & strong {
@@ -104,7 +100,7 @@
     @apply relative font-extrabold text-slate-700 dark:text-slate-300; 
 
     &::before{
-      @apply content-[''] hidden absolute h-full aspect-square border rounded-lg md:rounded-xl -left-9 md:-left-12 border-divider-light dark:border-divider-dark;
+      @apply content-[''] hidden absolute max-h-[34px] h-full top-[3%] aspect-square border rounded-lg md:rounded-xl -left-9 md:-left-12 border-divider-light dark:border-divider-dark;
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Ctext x='10' y='10' font-size='13' text-anchor='middle' dy='.3em'%3E%23%3C/text%3E%3C/svg%3E");
       @apply dark:brightness-50 dark:invert;
     }
@@ -307,10 +303,10 @@
     @apply dark:border-divider-dark;
 
     pre {
-      @apply overflow-x-auto p-4 text-[14px] leading-relaxed;
+      @apply overflow-x-auto p-4 text-[14px] mt-[-1.5rem] xl:mt-0;
 
       code {
-        @apply font-normal mt-[-1.5rem] lg:mt-[-1.5rem] xl:mt-0;
+        @apply font-normal;
       }
     }
 
