Fix cinema image

--- a/src/app/components/markdown/markdown.component.html
+++ b/src/app/components/markdown/markdown.component.html
@@ -22,7 +22,8 @@
         </svg>{{article?.metadata?.lang}}</div>
     </div>
   </div>
-  <div class="content-wrapper min-h-full flex-shrink-0 overflow-hidden lg:overflow-visible">
+  <!--<div class="content-wrapper min-h-full flex-shrink-0 overflow-hidden lg:overflow-visible">-->
+  <div class="content-wrapper min-h-full flex-shrink-0 overflow-y-visible lg:overflow-visible">
     <div class="flex flex-row-reverse gap-8 xl:gap-24">
       <div class="-mt-48 hidden lg:block">
         <div class="sticky top-24 z-[901] w-64 xl:w-[272px] fm:relative fm:top-0">
