--- a/src/app/contents/index/header/header-contact/header-contact.component.html
+++ b/src/app/contents/index/header/header-contact/header-contact.component.html
@@ -13,7 +13,7 @@
       </div>
       <div
         [@buttonResumeAnimation]="buttonResumeAnimation"
-        class="absolute top-0 left-0">
+        class="absolute top-0 -left-20">
         <button-resume/>
       </div>
     </div>
