--- a/src/app/contents/index/header/header-quote/header-quote.component.html
+++ b/src/app/contents/index/header/header-quote/header-quote.component.html
@@ -1,6 +1,6 @@
-<div class="content-wrapper">
-  <div class="flex items-center justify-center py-8">
-    <blockquote class="flex gap-2 pt-2 text-3xl text-slate-500 md:text-4xl lg:pt-0 lg:text-5xl dark:text-slate-400">
+<div class="content-wrapper h-">
+  <div class="flex items-center justify-center lg:py-8">
+    <blockquote class="min-h-[166px] flex gap-2 pt-2 text-3xl text-slate-500 md:text-4xl lg:pt-0 lg:text-5xl dark:text-slate-400">
       <svg-icon *ngIf="showQuote" [icon]="Icons.QuoteIcon"
                 className="-mt-1 h-10 text-slate-300 md:-mt-3 md:h-16 lg:h-24 dark:text-slate-800"/>
 
