--- a/src/app/contents/index/page-index.component.html
+++ b/src/app/contents/index/page-index.component.html
@@ -1,11 +1,12 @@
 <div id="__index">
+  <app-confetti-effect *ngIf="showConfetti" [power]="2" [particleCount]="560"/>
   <header id="page-header"
     class="background-grid background-grid--fade-out pt-36 pb-20 lg:pb-28 lg:pt-52 bord border-divider-light dark:border-divider-dark"
     data-accent="violet">
     <div class="content-wrapper">
       <div class="relative">
         <div class="relative z-10">
-          <header-title />
+          <header-title (showConfetti)="showConfetti=true"/>
         </div>
         <div class="mt-6 md:mt-8">
           <header-contact />
@@ -21,7 +22,7 @@
   </header>
 
   <div class="flex flex-col-reverse sm:flex-col">
-    <div class="relative mb-24 mt-20 sm:-mt-8 lg:-mt-16 lg:mb-24 md:block">
+    <div class="relative mb-16 mt-8 sm:-mt-8 lg:-mt-16 lg:mb-24 md:block">
       <div class="content-wrapper">
         <div class="flex gap-4 flex-col sm:flex-wrap md:flex-row lg:gap-8">
           <featured-card *ngFor="let item of items; let i = index" [style.animation-delay]="2.25+(i* 0.1)+'s'"
@@ -35,7 +36,16 @@
   </div>
 
   <div class="background-grid background-grid--fade-out mt-0 sm:mt-20 border-t border-divider-light dark:border-divider-dark">
-    <section class="mt-12 lg:mt-24 mb-12 lg:mb-24">
+    <section class="mt-12 lg:mt-24 mb-12 lg:mb-20">
+      <header class="mb-8">
+        <div class="content-wrapper">
+          <h2 class="text-accent-600 mb-2 block font-black lg:mb-4 dark:text-accent-400">Passionate & Experienced</h2>
+          <p class="mb-4 text-3xl font-black text-slate-700 lg:text-4xl dark:text-slate-200">5 Years of Full-Stack Development</p>
+          <p class="max-w-lg text-slate-600 dark:text-slate-400">I have been working as a full-stack developer for 5 years, and I truly enjoy every moment of it. Writing clean, optimized, and efficient code is always my top priority.</p>
+        </div>
+      </header>
+    </section>
+    <section class="mb-12 lg:mb-20">
       <header class="mb-8">
         <div class="content-wrapper">
           <h2 class="text-accent-600 mb-2 block font-black lg:mb-4 dark:text-accent-400">Detail Oriented</h2>
@@ -44,7 +54,7 @@
         </div>
       </header>
     </section>
-    <section class="mb-12 lg:mb-24">
+    <section class="mb-12 lg:mb-20">
       <header class="mb-8">
         <div class="content-wrapper">
           <h2 class="text-accent-600 mb-2 block font-black lg:mb-4 dark:text-accent-400">Pretty &amp; Optimized</h2>
