--- a/src/styles/md-contents.scss
+++ b/src/styles/md-contents.scss
@@ -192,7 +192,6 @@
       &::before,
       &::after {
         @apply content-['`'];
-        @apply border-l-2 border-slate-500 dark:border-slate-400; /* Add this line */
       }
 
       &::before {
@@ -297,241 +296,239 @@
     }
   }
   */
+}
 
-  .mdx-code {
-    @apply border-divider-light relative mt-4 mb-8 overflow-hidden rounded-xl border bg-[var(--code-bg)] text-slate-400;
-    @apply dark:border-divider-dark;
+.mdx-code {
+  @apply border-divider-light dark:border-divider-dark relative mt-4 mb-8 overflow-hidden rounded-xl border bg-[var(--code-bg)] text-slate-400;
 
-    pre {
-      @apply overflow-x-auto p-4 text-[14px] mt-[-1.5rem] xl:mt-0;
+  pre {
+    @apply overflow-x-auto p-4 text-[14px];
 
-      code {
-        @apply font-normal;
-      }
+    code {
+      @apply font-normal;
     }
+  }
 
-    .code-highlight {
-      @apply float-left /*min-w-full*/;
+  .code-highlight {
+    @apply float-left min-w-full;
 
-      .code-line {
-        //@apply block;
+    .code-line {
+      @apply block;
+
+      &.highlight-line {
+        @apply bg-accent-500/5 -mx-4 px-4;
+      }
+
+      &.line-number {
+        @apply pl-10;
+
+        &::before {
+          @apply absolute left-0 box-content inline-block w-4 bg-[var(--code-bg)] pl-4 pr-6 text-right content-[attr(line)];
+        }
 
         &.highlight-line {
-          @apply bg-accent-500/5 -mx-4 px-4;
-        }
-
-        &.line-number {
-          @apply pl-10;
+          @apply ml-0 bg-transparent;
 
           &::before {
-            @apply absolute left-0 box-content inline-block w-4 bg-[var(--code-bg)] pl-4 pr-6 text-right content-[attr(line)];
-          }
-
-          &.highlight-line {
-            @apply ml-0 bg-transparent;
-
-            &::before {
-              @apply border-accent-500/40 border-r-4 pr-5 text-[var(--prism-color-base-secondary)];
-              @apply dark:border-accent-600/40;
-            }
+            @apply border-accent-500/40 border-r-4 pr-5 text-[var(--prism-color-base-secondary)];
+            @apply dark:border-accent-600/40;
           }
         }
       }
     }
+  }
 
-    .language-bash {
-      .code-line {
-        &::before {
-          @apply mr-3 inline-block content-['$'];
-        }
+  .language-bash {
+    .code-line {
+      &::before {
+        @apply mr-3 inline-block content-['$'];
+      }
+    }
+  }
+
+  &__content {
+    @apply bg-[var(--code-bg)];
+
+    &:hover {
+      .mdx-code__copy-button {
+        @apply pointer-events-auto opacity-100;
+      }
+    }
+  }
+
+  &__copy-button {
+    @apply border-divider-light absolute top-3 right-3 flex h-8 w-8 items-center justify-center rounded-lg border bg-white text-slate-600;
+    @apply dark:border-divider-dark dark:bg-slate-900 dark:text-slate-400;
+
+    svg {
+      @apply h-4 w-4;
+    }
+
+    &-message {
+      @apply bg-accent-600 text-accent-200 pointer-events-none absolute -left-16 -ml-2 w-16 translate-x-2 rounded-md px-2 py-1 text-xs font-bold opacity-0 transition;
+      @apply dark:bg-accent-300 dark:text-accent-900;
+
+      &-copied {
+        @apply translate-x-0 opacity-100;
+      }
+    }
+  }
+
+  &__footer {
+    @apply flex items-center justify-end border-t border-divider-light dark:border-divider-dark px-2 text-xs text-slate-600;
+    @apply dark:text-slate-400;
+
+    &-item {
+      @apply flex h-7 items-center gap-1 px-2;
+    }
+  }
+}
+
+.mdx-code-group {
+  &--tab {
+    @apply border-divider-light relative mt-4 mb-8 overflow-hidden rounded-xl border;
+    @apply dark:border-divider-dark;
+
+    .mdx-code-group__header-wrapper {
+      @apply p-3;
+    }
+
+    .mdx-code-group__header {
+      @apply border-divider-light flex h-8 w-fit rounded-lg border;
+      @apply dark:border-divider-dark;
+    }
+
+    .mdx-code-group__tab {
+      @apply border-divider-light flex h-full items-center justify-center gap-2 border-r px-4 text-xs font-bold;
+      @apply dark:border-divider-dark;
+      @apply ui-selected:bg-accent-600/[0.08] ui-selected:text-accent-600;
+      @apply dark:ui-selected:bg-accent-400/10 dark:ui-selected:text-accent-400;
+
+      &:first-child {
+        @apply rounded-l-lg;
+      }
+
+      &:last-child {
+        @apply rounded-r-lg border-none;
+      }
+
+      &:focus-visible {
+        @apply rounded-md;
+      }
+
+      svg {
+        @apply h-4 w-4;
       }
     }
 
-    &__content {
-      @apply bg-[var(--code-bg)];
+    .mdx-code-group__content {
+      @apply p-3 pt-0;
 
-      &:hover {
-        .mdx-code__copy-button {
-          @apply pointer-events-auto opacity-100;
-        }
+      .mdx-code {
+        @apply static border-none;
       }
     }
+  }
 
-    &__copy-button {
-      @apply border-divider-light absolute top-3 right-3 flex h-8 w-8 items-center justify-center rounded-lg border bg-white text-slate-600;
-      @apply dark:border-divider-dark dark:bg-slate-900 dark:text-slate-400;
+  &--files {
+    @apply border-divider-light mt-4 mb-8 overflow-hidden rounded-xl border bg-[var(--code-bg)] text-slate-400;
+    @apply dark:border-divider-dark;
+
+    .mdx-code-group__header {
+      @apply flex items-center bg-[var(--code-window)] pt-1.5 pl-2;
+    }
+
+    .mdx-code-group__file {
+      @apply relative flex h-10 items-center gap-2 rounded-t-lg rounded-b-none bg-transparent pl-3 pr-4 text-xs font-semibold text-slate-600;
+      @apply dark:text-slate-400;
+      @apply ui-selected:bg-[var(--code-bg)];
+
+      &-content {
+        @apply flex gap-2 rounded-sm px-2 py-0.5;
+      }
+
+      &:focus-visible {
+        @apply ring-0;
+
+        .mdx-code-group__file-content {
+          @apply ring-2 ring-slate-400;
+        }
+      }
 
       svg {
         @apply h-4 w-4;
       }
 
-      &-message {
-        @apply bg-accent-600 text-accent-200 pointer-events-none absolute -left-16 -ml-2 w-16 translate-x-2 rounded-md px-2 py-1 text-xs font-bold opacity-0 transition;
-        @apply dark:bg-accent-300 dark:text-accent-900;
+      &-bl {
+        @apply absolute bottom-0 left-0;
 
-        &-copied {
-          @apply translate-x-0 opacity-100;
+        &::before {
+          @apply absolute bottom-0 left-[-12px] z-[2] h-3 w-3 rounded-br-md bg-[var(--code-window)] content-[''];
+        }
+
+        &::after {
+          @apply absolute bottom-0 left-[-12px] z-[1] h-3 w-3 bg-[var(--code-bg)] content-[''];
+        }
+      }
+
+      &-br {
+        @apply absolute bottom-0 right-0;
+
+        &::before {
+          @apply absolute bottom-0 right-[-12px] z-[2] h-3 w-3 rounded-bl-md bg-[var(--code-window)] content-[''];
+        }
+
+        &::after {
+          @apply absolute bottom-0 right-[-12px] z-[1] h-3 w-3 bg-[var(--code-bg)] content-[''];
         }
       }
     }
 
-    &__footer {
-      @apply flex items-center justify-end border-t border-divider-light dark:border-divider-dark px-2 text-xs text-slate-600 dark:text-slate-400;
-      @apply dark:text-slate-400;
-
-      &-item {
-        @apply flex h-7 items-center gap-1 px-2;
-      }
-    }
-  }
-
-  .mdx-code-group {
-    &--tab {
-      @apply border-divider-light relative mt-4 mb-8 overflow-hidden rounded-xl border;
-      @apply dark:border-divider-dark;
-
-      .mdx-code-group__header-wrapper {
-        @apply p-3;
-      }
-
-      .mdx-code-group__header {
-        @apply border-divider-light flex h-8 w-fit rounded-lg border;
-        @apply dark:border-divider-dark;
-      }
-
-      .mdx-code-group__tab {
-        @apply border-divider-light flex h-full items-center justify-center gap-2 border-r px-4 text-xs font-bold;
-        @apply dark:border-divider-dark;
-        @apply ui-selected:bg-accent-600/[0.08] ui-selected:text-accent-600;
-        @apply dark:ui-selected:bg-accent-400/10 dark:ui-selected:text-accent-400;
-
-        &:first-child {
-          @apply rounded-l-lg;
-        }
-
-        &:last-child {
-          @apply rounded-r-lg border-none;
-        }
-
-        &:focus-visible {
-          @apply rounded-md;
-        }
-
-        svg {
-          @apply h-4 w-4;
-        }
-      }
-
-      .mdx-code-group__content {
-        @apply p-3 pt-0;
-
-        .mdx-code {
-          @apply static border-none;
-        }
-      }
-    }
-
-    &--files {
-      @apply border-divider-light mt-4 mb-8 overflow-hidden rounded-xl border bg-[var(--code-bg)] text-slate-400;
-      @apply dark:border-divider-dark;
-
-      .mdx-code-group__header {
-        @apply flex items-center bg-[var(--code-window)] pt-1.5 pl-2;
-      }
-
-      .mdx-code-group__file {
-        @apply relative flex h-10 items-center gap-2 rounded-t-lg rounded-b-none bg-transparent pl-3 pr-4 text-xs font-semibold text-slate-600;
-        @apply dark:text-slate-400;
-        @apply ui-selected:bg-[var(--code-bg)];
-
-        &-content {
-          @apply flex gap-2 rounded-sm px-2 py-0.5;
-        }
-
-        &:focus-visible {
-          @apply ring-0;
-
-          .mdx-code-group__file-content {
-            @apply ring-2 ring-slate-400;
-          }
-        }
-
-        svg {
-          @apply h-4 w-4;
-        }
-
-        &-bl {
-          @apply absolute bottom-0 left-0;
-
-          &::before {
-            @apply absolute bottom-0 left-[-12px] z-[2] h-3 w-3 rounded-br-md bg-[var(--code-window)] content-[''];
-          }
-
-          &::after {
-            @apply absolute bottom-0 left-[-12px] z-[1] h-3 w-3 bg-[var(--code-bg)] content-[''];
-          }
-        }
-
-        &-br {
-          @apply absolute bottom-0 right-0;
-
-          &::before {
-            @apply absolute bottom-0 right-[-12px] z-[2] h-3 w-3 rounded-bl-md bg-[var(--code-window)] content-[''];
-          }
-
-          &::after {
-            @apply absolute bottom-0 right-[-12px] z-[1] h-3 w-3 bg-[var(--code-bg)] content-[''];
-          }
-        }
-      }
-
-      .mdx-code-group__content {
-        .mdx-code {
-          @apply rounded-none border-none;
-        }
-      }
-    }
-
-    &__content {
+    .mdx-code-group__content {
       .mdx-code {
-        @apply my-0;
+        @apply rounded-none border-none;
       }
     }
   }
 
-
-  .mdx-code .inline-highlight,
-  .mdx-inline-highlight {
-    @apply bg-accent-500/30 text-accent-300 border-accent-300 mx-0.5 whitespace-nowrap rounded-md border py-0.5 px-1.5 font-mono;
-
-    &.blue {
-      @apply border-blue-300 bg-blue-500/30 text-blue-300;
-    }
-
-    &.violet {
-      @apply border-violet-300 bg-violet-500/30 text-violet-300;
+  &__content {
+    .mdx-code {
+      @apply my-0;
     }
   }
+}
 
-  .mdx-code .inline-highlight,
-  .mdx-inline-highlight {
-    @apply text-accent-600 bg-accent-500/10;
-    @apply dark:text-accent-300 dark:bg-accent-500/30;
+.mdx-code .inline-highlight,
+.mdx-inline-highlight {
+  @apply bg-accent-500/30 text-accent-300 border-accent-300 mx-0.5 whitespace-nowrap rounded-md border py-0.5 px-1.5 font-mono;
 
-    &.blue {
-      @apply bg-blue-500/10 text-blue-700;
-      @apply dark:text-blue-300;
-    }
-
-    &.violet {
-      @apply bg-violet-500/10 text-violet-700;
-      @apply dark:text-violet-300;
-    }
+  &.blue {
+    @apply border-blue-300 bg-blue-500/30 text-blue-300;
   }
 
-  .chip {
-    @apply text-accent-600 dark:text-accent-400 font-medium bg-accent-600/[0.08] inline-flex h-6 items-center gap-1 rounded-full px-2 text-[13px] dark:dark:bg-accent-400/10 dark:font-normal;
+  &.violet {
+    @apply border-violet-300 bg-violet-500/30 text-violet-300;
   }
+}
+
+.mdx-code .inline-highlight,
+.mdx-inline-highlight {
+  @apply text-accent-600 bg-accent-500/10;
+  @apply dark:text-accent-300 dark:bg-accent-500/30;
+
+  &.blue {
+    @apply bg-blue-500/10 text-blue-700;
+    @apply dark:text-blue-300;
+  }
+
+  &.violet {
+    @apply bg-violet-500/10 text-violet-700;
+    @apply dark:text-violet-300;
+  }
+}
+
+.chip {
+  @apply text-accent-600 dark:text-accent-400 font-medium bg-accent-600/[0.08] inline-flex h-6 items-center gap-1 rounded-full px-2 text-[13px] dark:dark:bg-accent-400/10 dark:font-normal;
 }
 
 @keyframes slide-in-content {
